syntax = "proto3";

package me.shy.demo.grpc;

option java_package = "me.shy.demo.netty.rpc.grpc.userGen";
// 此处的Java名不能与message相同
option java_outer_classname = "UserProto";
option java_multiple_files = true;

message User {
  string name = 1;
  int32 age = 2;
  string location = 3;
}

message UserName {
  string name = 1;
}

message UserAge {
  int32 age = 1;
}

message UserList {
  repeated User user = 1;
}

message Words {
  string what_say = 1;
}


service UserService {
  // 简单请求
  rpc GetUserByName (UserName) returns (User) {}
  // 流式响应
  rpc GetUsersByAge (UserAge) returns (stream User) {}
  // 流式请求
  rpc GetPackingUsersByAge (stream UserAge) returns (UserList) {}
  // 双向流
  rpc Talk (stream Words) returns (stream Words) {}
}